--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -24,7 +24,7 @@
 <div class="container-fluid" style="min-height: 95%">
 
 	<div class="row">
-		<div class="col-xs-9 text-left"><h1>Bars in your area</h1></div>
+		<div class="col-xs-9 text-left"><h1>Nightlife in your area</h1></div>
 			
 		<div class="col-xs-3 text-right">
 		<h1>
