--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -36,15 +36,17 @@
 
 	</div>	
 	<div class="row">
+	<div class="container text-center">
 	<div class="col-md-3 col-sm-0 col-xs-0"></div>
-	<div class="col-md-6 col-xs-12 col-xs-12">
+	<div class="col-md-6 col-xs-12 col-xs-12 text-center">
 			<form method="POST" action="/">
 				<input class="submit-text form-control" type="text" name="location" required="true" placeholder="Enter your place">
 				<button class="btn btn-default submit-btn" id="submit-button" type="submit">Submit</button>
 			</form>
-			</div>
-			<div class="col-md-3 col-sm-0 col-xs-0"></div>
-			</div>
+	</div>
+	<div class="col-md-3 col-sm-0 col-xs-0"></div>
+	</div>
+	</div>
 
 			<h2 class="caps"><%= city %></h2>
 			<% if (barsPresent) { %>
@@ -59,6 +61,11 @@
 			<% } %>
 </div>
 
+<footer class="footer  text-center">
+	<div class="container">
+		<p><a href="https://github.com/khansubhan95" target="_blank">@khansubhan95</a></p>
+	</div>
+</footer>
 			
 </body>
 </html>
