Change placeholder text

--- a/app/views/list.ejs
+++ b/app/views/list.ejs
@@ -40,7 +40,7 @@
 	<div class="col-md-3 col-sm-0 col-xs-0"></div>
 	<div class="col-md-6 col-xs-12 col-xs-12 text-center">
 			<form method="POST" action="/">
-				<input class="submit-text form-control" type="text" name="location" required="true" placeholder="Enter your place">
+				<input class="submit-text form-control" type="text" name="location" required="true" placeholder="Enter your city name">
 				<button class="btn btn-default submit-btn" id="submit-button" type="submit">Submit</button>
 			</form>
 	</div>
